tests/ui/implied-bounds/reject-collapsing-adt.stderr
error[E0308]: mismatched types
  --> $DIR/reject-collapsing-adt.rs:9:60
   |
LL |     let _f: for<'x> fn(Wrap<&'x ()>, &'x u32) -> &'x u32 = foo;
   |             --------------------------------------------   ^^^ types differ
   |             |
   |             expected due to this
   |
   = note: expected fn pointer `for<'x> fn(Wrap<&'x ()>, &'x _) -> &'x _`
                 found fn item `for<'a, 'b> fn(Wrap<&'a &'b ()>, &'b _) -> &'a _ {foo}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
